# AICamera

./: .gitignore  README.md
AICamera/app/: CMakeLists.txt  build.gradle
AICamera/app/src/main/: AndroidManifest.xml
AICamera/app/src/main/cpp/: classes.h  native-lib.cpp  nms.h  preprocess.h
AICamera/app/src/main/cpp/ATen/: ATen.h  AccumulateType.h  Allocator.h  CMakeLists.txt  CPUApplyUtils.h  CPUFixedAllocator.h  CPUGeneral.h  CPUTypeDefault.h  CheckGenerator.h  Config.h.in  Context.h  DLConvertor.h  Declarations.cwrap  Device.h  DeviceGuard.h  Dispatch.h  ExpandUtils.h  Half.h  InferSize.h  InitialTensorOptions.h  LegacyTHDispatch.h  MatrixRef.h  Parallel.h  ScalarOps.h  SparseTensorImpl.h  SparseTensorUtils.h  Tensor.h  TensorGeometry.h  TensorOperators.h  TensorOptions.h  TensorUtils.h  Type.h  UndefinedType.h  Utils.h  WrapDimUtils.h  WrapDimUtilsMulti.h  code_template.py  common_with_cwrap.py  cwrap_parser.py  extract_cwrap.py  (+6 more)
AICamera/app/src/main/cpp/ATen/core/: ATenGeneral.h  Backtrace.h  CMakeLists.txt  DefaultDtype.h  Deprecated.h  DimVector.h  Formatting.h  Generator.h  Half.h  LegacyDeviceTypeInit.h  LegacyTypeDispatch.h  Macros.h  Reduction.h  SparseTensorRef.h  Tensor.h  TensorAccessor.h  TensorImpl.h  TensorMethods.h  TensorOptions.h  Type.h  UndefinedTensorImpl.h  VariableHooksInterface.h  WrapDimMinimal.h  alias_info.h  aten_interned_strings.h  blob.h  context_base.h  function_schema.h  functional.h  interned_strings.h  interned_strings_class.h  ivalue.h  jit_type.h  thread_pool.h
AICamera/app/src/main/cpp/ATen/cpu/: vml.h
AICamera/app/src/main/cpp/ATen/cuda/: ATenCUDAGeneral.h  Array.h  CUDAApplyUtils.cuh  CUDAConfig.h.in  CUDAContext.h  CUDADevice.h  CUDAEvent.h  CUDAGuard.h  CUDAMultiStreamGuard.h  CUDAStream.h  CUDATensorMethods.cuh  CUDATypeDefault.h  Exceptions.h  NumericLimits.cuh  PinnedMemoryAllocator.h  _curand_mtgp32_host.h
AICamera/app/src/main/cpp/ATen/cudnn/: Descriptors.h  Handle.h  Handles.h  Types.h  Utils.h  cudnn-wrapper.h
AICamera/app/src/main/cpp/ATen/detail/: CPUGuardImpl.h  CUDAHooksInterface.h  ComplexHooksInterface.h  FunctionTraits.h  HIPHooksInterface.h  ScalarTypeConversions.h
AICamera/app/src/main/cpp/ATen/miopen/: Descriptors.h  Exceptions.h  Handle.h  Types.h  Utils.h
AICamera/app/src/main/cpp/ATen/mkl/: Descriptors.h
AICamera/app/src/main/cpp/ATen/mkldnn/: Runtime.h
AICamera/app/src/main/cpp/ATen/native/: Activation.h  BinaryOps.h  Copy.h  DispatchStub.h  Distance.h  Distributions.h  GridSampler.h  Indexing.h  LinearAlgebraUtils.h  README.md  RNN.h  ReduceOps.h  ReduceOpsUtils.h  Resize.h  TensorIterator.h  TensorTransformations.h  native_functions.yaml
AICamera/app/src/main/cpp/ATen/templates/: Functions.h  GeneratorDerived.h  LegacyTHDispatcher.h  NativeFunctions.h  RegisterCPU.h  RegisterCUDA.h  Tensor.h  TensorMethods.h  Type.h  TypeDefault.h  TypeDerived.h  TypeExtendedInterface.h
AICamera/app/src/main/cpp/ATen/test/: CMakeLists.txt  cuda_half_test.cu  cuda_integer_divider_test.cu  cuda_optional_test.cu  cuda_packedtensoraccessor_test.cu
AICamera/app/src/main/cpp/c10/: CMakeLists.txt  Device.h  DeviceGuard.h  DeviceType.h  Half-inl.h  Half.h  Stream.h  StreamGuard.h
AICamera/app/src/main/cpp/c10/core/: Allocator.h  Backend.h  Layout.h  Scalar.h  ScalarType.h  ScalarTypeUtils.h  Storage.h  StorageImpl.h  TensorTypeId.h  TensorTypeIdRegistration.h  bitcasts.h
AICamera/app/src/main/cpp/c10/cuda/: CMakeLists.txt  CUDAException.h  CUDAFunctions.h  CUDAMacros.h  CUDAMathCompat.h
AICamera/app/src/main/cpp/c10/hip/: CMakeLists.txt
AICamera/app/src/main/cpp/c10/impl/: DeviceGuardImplInterface.h  FakeGuardImpl.h  InlineDeviceGuard.h  InlineStreamGuard.h  README.md  VirtualGuardImpl.h
AICamera/app/src/main/cpp/c10/macros/: Export.h  Macros.h  cmake_macros.h.in
AICamera/app/src/main/cpp/c10/test/: CMakeLists.txt
AICamera/app/src/main/cpp/c10/util/: Array.h  ArrayRef.h  C++17.h  Exception.h  LeftRight.h  Logging.h  Metaprogramming.h  Optional.h  Registry.h  TypeList.h  TypeTraits.h  UniqueVoidPtr.h  flat_hash_map.h  intrusive_ptr.h  logging_is_not_google_glog.h  string_utils.h  typeid.h
AICamera/app/src/main/cpp/caffe2/: CMakeLists.txt  requirements.txt
AICamera/app/src/main/cpp/caffe2/contrib/: CMakeLists.txt
AICamera/app/src/main/cpp/caffe2/core/: CMakeLists.txt  THCCachingAllocator.cu  THCCachingAllocator_gpu.h  allocator.cc  allocator.h  blob.h  blob_gpu_test.cc  blob_serialization.cc  blob_serialization.h  blob_test.cc  common.h  common_gpu.cc  common_gpu.h  context.h  context_gpu.cu  context_gpu.h  context_gpu_test.cc  context_test.cc  cudnn_wrappers.h  db.cc  db.h  event.h  event_gpu.cc  init.cc  init.h  init_intrinsics_check.cc  init_test.cc  macros.h.in  module.cc  module.h  net.cc  net.h  net_async_base.cc  net_async_base.h  net_async_scheduling.cc  net_async_scheduling.h  net_async_tracing.cc  net_async_tracing.h  net_dag_utils.cc  net_simple.cc  (+23 more)
AICamera/app/src/main/cpp/caffe2/cuda_rtc/: elemenntwise_rtc_gpu.cc  pool_op_rtc_gpu.cc
AICamera/app/src/main/cpp/caffe2/db/: leveldb.cc  lmdb.cc  protodb.cc  zmqdb.cc
AICamera/app/src/main/cpp/caffe2/distributed/: file_store_handler_op_gpu.cc  redis_store_handler_op_gpu.cc
AICamera/app/src/main/cpp/caffe2/ideep/: ideep_utils.h
AICamera/app/src/main/cpp/caffe2/image/: image_input_op.cc  image_input_op.h  image_input_op_gpu.cc
AICamera/app/src/main/cpp/caffe2/mpi/: mpi_ops.h
AICamera/app/src/main/cpp/caffe2/observers/: CMakeLists.txt  profile_observer.h  profile_observer_gpu.cc  runcnt_observer.cc
AICamera/app/src/main/cpp/caffe2/onnx/: backend.cc  backend.h  helper.cc  helper.h  onnx_exporter.cc  onnx_exporter.h  onnxifi_init.cc  onnxifi_init.h  ssa_test.cc
AICamera/app/src/main/cpp/caffe2/operators/: CMakeLists.txt  accumulate_op.h  accuracy_op.cu  accuracy_op.h  activation_ops_cudnn.h  affine_channel_op.cc  affine_channel_op.cu  affine_channel_op.h  apmeter_op.h  arg_ops.h  assert_op.cc  assert_op.h  atomic_ops.cc  batch_box_cox_op.cc  batch_box_cox_op.h  cast_op.cc  (+377 more)
AICamera/app/src/main/res/layout/: activity_main.xml
(+789 files in other folders)
